fix: update pubkey overwrap style

--- a/src/app.css
+++ b/src/app.css
@@ -38,6 +38,6 @@ input {
 #app {
   width: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2rem 0;
   text-align: center;
 }
